--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   {% include head.html %}
 
   <body>
-  <body style="background-color:#EDD3C4">
+  <body style="background-color:#f5e2e2 ">
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js">
       </script>
