--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{{ base.url }}/css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style type="text/css">
       html {
@@ -19,7 +19,7 @@
   {% include head.html %}
 
   <body>
-  <body style="background-color:#f5e2e2 ">
+  <body style="background-color:#CDD1C4 ">
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js">
       </script>
