--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,15 @@
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js">
       </script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js">
+        (function($){
+  $(function(){
+
+    $('.button-collapse').sideNav();
+
+  }); // end of document ready
+})(jQuery); // end of jQuery name space
+      </script>
 
 
 
@@ -35,7 +43,13 @@
 
     
       <div class="container">
+        <ul id="slide-out" class="side-nav">
+      <li><a href="#!">First Sidebar Link</a></li>
+      <li><a href="#!">Second Sidebar Link</a></li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="material-icons">menu</i></a>
         {{ content }}
+
       </div>
       {% include footer.html %}
 
